spacing corrections

--- a/contact.css
+++ b/contact.css
@@ -16,10 +16,12 @@ h2  > p {
     font-family: Impact, sans-serif;
     font-weight: 900;
     color: #33ccff;
-    -webkit-text-stroke: 1.25px #000099;
-    text-shadow: 0.35rem -0.35rem 0 #000099;
-    letter-spacing: -0.15vw;
-    size: 12em;
+    -webkit-text-stroke: 1.25px #3f694c;
+    text-shadow: 0.35rem -0.35rem 0 #000099, 0.7rem -0.7rem 0 lightseagreen;
+    letter-spacing: -0.005vw;
+    font-size: 5em;
+    position: absolute;
+    top: -152px;
 }
 
 
